add token and URL

--- a/notes.html
+++ b/notes.html
@@ -16,3 +16,12 @@ curl http://169.254.169.254/latest/dynamic/instance-identity
 curl http://169.254.169.254/latest/dynamic/instance-identity/document
  
 curl -s http://169.254.169.254/latest/dynamic/instance-identity/document > /var/www/html/index.html
+-----------------
+
+META-DATA URL and Token -> http://169.254.169.254/
+[root@ip-172-31-19-70 ec2-user]# TOKEN=$(curl -sX PUT "http://169.254.169.254/latest/api/token" \
+  -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
+[root@ip-172-31-19-70 ec2-user]# echo $TOKEN
+AQAAAF3o04f0Oau5RJn2sJS7FdgwluAvtvJ57EKtLWPsxLrCaXlmIA==
+[root@ip-172-31-19-70 ec2-user]# curl -H "X-aws-ec2-metadata-token: $TOKEN" \
+http://169.254.169.254/latest/meta-data/
