--- a/notes.html
+++ b/notes.html
@@ -16,8 +16,10 @@ curl http://169.254.169.254/latest/dynamic/instance-identity
 curl http://169.254.169.254/latest/dynamic/instance-identity/document
  
 curl -s http://169.254.169.254/latest/dynamic/instance-identity/document > /var/www/html/index.html
+
 -----------------
 
+When the Apache web server is installed and running, we can access the metadata of the EC2 instance by making HTTP requests to the special IP address
 META-DATA URL and Token -> http://169.254.169.254/
 
 [root@ip-172-31-19-70 ec2-user]# TOKEN=$(curl -sX PUT "http://169.254.169.254/latest/api/token" \
