Load Blanacers info

--- a/notes.html
+++ b/notes.html
@@ -407,3 +407,27 @@ Think: Old, avoid for new designs
 
 One-line exam takeaway (memorize this)
 ALB = HTTP logic, NLB = raw speed, CLB = legacy.
+
+***Gateway Load Balancer
+There is a fourth type of Load Balancer as well - Gateway Load Balancer
+
+The Gateway Load Balancer (GWLB) is a specialized load balancer designed to 
+deploy, scale, and manage third-party virtual appliances on AWS. It allows for 
+seamless traffic distribution across multiple virtual appliances, providing a 
+single entry point for all traffic while offering scalability and increased availability.
+
+Key Points:
+
+Purpose: Used to deploy, scale, and run third-party virtual appliances.
+
+Functionality: Distributes traffic across multiple virtual appliances, 
+scaling them based on demand, reducing potential points of failure, 
+and enhancing network availability.
+
+AWS Marketplace: Enables finding, testing, and purchasing virtual appliances 
+directly from third-party vendors, simplifying the deployment process and 
+accelerating time-to-value.
+
+This addition ensures that users can efficiently manage their network traffic 
+while leveraging third-party solutions directly within AWS.
+----------------------------
