Load Blanacers info

--- a/notes.html
+++ b/notes.html
@@ -374,6 +374,9 @@ from a patched instance and launch a replacement instance.
 --------------------------
 
 Application Load Balancer (ALB)
+An Application Load Balancer (ALB) operates at Layer 7 (Application layer), 
+handling HTTP/HTTPS traffic and making routing decisions based on URLs, 
+host headers, paths, etc.
 
 What it does:
 Routes HTTP/HTTPS traffic based on URL paths, hostnames, headers.
